# ntrulp

./: Cargo.toml  LICENSE  README.md
benches/: chipher.rs  cipher.rs  encode.rs  fq_encode.rs  kem.rs  key_gen.rs  r3.rs  rq.rs
examples/: bytes_chiper.rs  chiper.rs  cipher.rs  keygen.rs  poly_chiper.rs
src/: lib.rs  ntru.rs  ntrulp.rs  ntrup.rs
src/compress/: compress.rs  error.rs  mod.rs  r3.rs
src/confg/: params.rs
src/config/: params.rs
src/encode/: mod.rs  r3.rs  rq.rs  shuffle.rs  sort.rs  top.rs
src/errors/: mod.rs
src/kem/: errors.rs  f3.rs  fq.rs  lpr.rs  mod.rs  pair.rs  priv_key.rs  pub_key.rs  r3.rs  rq.rs
src/key/: kem_error.rs  mod.rs  pair.rs  priv_key.rs  private.rs  pub_key.rs  public.rs
src/math/: euclid_inv_num.rs  finite_field.rs  mod.rs  modulo.rs  nums.rs  prime.rs  rings.rs
src/ntru/: aes.rs  cipher.rs  error.rs  errors.rs  lpr.rs  mod.rs  ntrup.rs  params.rs  std_cipher.rs  std_error.rs
src/params/: mod.rs  params.rs
src/poly/: error.rs  errors.rs  f3.rs  fq.rs  mod.rs  poly.rs  priv_key.rs  pub_key.rs  r3.rs  rq.rs  traits.rs  v2.rs
src/random/: mod.rs  random.rs
src/rng/: mod.rs
