[package]
name = "ntrulp"
description = "Pure implementation of high-security prime-degree large-Galois-group inert-modulus ideal-lattice-based cryptography."
version = "0.1.8"
edition = "2021"
publish = true
authors = ["Rinat hicc0rus@gmail.com"]
readme = "README.md"
license-file = "LICENSE"
keywords = ["NTRU", "rust", "ideal-lattice-based", "cryptography"]

[features]
ntrup653 = []
ntrup761 = []
ntrup857 = []
ntrup953 = []
ntrup1013 = []
ntrup1277 = []

[dependencies]
rand = "0.8.5"

[dev-dependencies]
criterion = "0.3"
num_cpus = "1.16.0"

[[bench]]
name = "rq"
harness = false

[[bench]]
name = "r3"
harness = false

[[bench]]
name = "fq_encode"
harness = false

[[bench]]
name = "kem"
harness = false

[[bench]]
name = "cipher"
harness = false
