[package]
name = "ntrulp"
description = "Pure implementation of high-security prime-degree large-Galois-group inert-modulus ideal-lattice-based cryptography."
version = "0.1.8"
edition = "2021"
publish = true
authors = ["Rinat hicc0rus@gmail.com"]
readme = "README.md"
license-file = "LICENSE"
keywords = ["NTRU", "rust", "ideal-lattice-based", "cryptography"]

[features]
default = ["std"]
ntrup653 = []
ntrup761 = []
ntrup857 = []
ntrup953 = []
ntrup1013 = []
ntrup1277 = []
std = []

[dependencies]
rand = "0.8.5"
rand_chacha = "0.3.1"

[dev-dependencies]
