[package]
name = "ntrulp"
description = "Pure implementation of high-security prime-degree large-Galois-group inert-modulus ideal-lattice-based cryptography."
version = "0.2.0"
edition = "2021"
publish = true
authors = ["Rinat hicc0rus@gmail.com"]
documentation = "https://github.com/openzebra/ntrulp/blob/master/README.md"
homepage = "https://github.com/openzebra/ntrulp"
repository = "https://github.com/openzebra/ntrulp"
readme = "README.md"
license-file = "LICENSE"
categories = ["cryptography", "no-std", "algorithms"]
keywords = [
  "post-quantum",
  "ntru",
  "cryptography",
  "encryption",
  "key-exchange",
]

[features]
default = []
ntrup653 = []
ntrup761 = []
ntrup857 = []
ntrup953 = []
ntrup1013 = []
ntrup1277 = []
std = ["dep:num_cpus"]

[dependencies]
num_cpus = { version = "1.16.0", optional = true }
rand = "0.8.5"
rand_chacha = "0.3.1"

[dev-dependencies]
criterion = "0.5.1"

[[example]]
name = "cipher"
required-features = ["std"]

[[bench]]
name = "rq"
harness = false

[[bench]]
name = "r3"
harness = false

[[bench]]
name = "fq_encode"
harness = false

[[bench]]
name = "kem"
harness = false

[[bench]]
name = "cipher"
harness = false
required-features = ["std"]
